--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ header {
     background-color: #2D3A2F;
     color: #f5f5f5;
     padding: 8%;
+    padding-bottom: 4%;
 }
 
 h1 {
@@ -21,6 +22,7 @@ h2 {
 header img {
     width: 65%;
     position: absolute;
+    z-index: 2;
 }
 
 header p {
@@ -61,6 +63,47 @@ a {
     color: #C5B946;
 }
 
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+}
+
+.sticky + .content {
+    padding-top: 160px;
+}
+
+.positionGroup {
+    border-left: 1px solid #f5f5f5;
+    border-radius: 5px;
+    padding-left: 10px;
+}
+
 #cv {
     height: 15em;
+}
+
+#navbar {
+    background-color: #2D3A2F;
+    color: #2D3A2F;
+    font-family: 'Josefin Sans', sans-serif;
+    font-weight: 300;
+    font-size: 1.25rem;
+}
+
+#navbar a.active {
+    background-color: #f5f5f5;
+    color: #2D3A2F;
+}
+
+#navbar li {
+    max-height: 47px;
+}
+
+#headshot {
+    border-radius: 50%;
+    max-width: 50%;
+    margin-left: 30px;
+    /* border: 10px solid #2D3A2F; */
 }
