--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,17 @@
+body {
+    overflow-x: hidden;
+}
+
 header {
     background-color: #2D3A2F;
     color: #f5f5f5;
     padding: 8%;
     padding-bottom: 4%;
+}
+
+footer {
+    background-color: #2D3A2F;
+    color: #f5f5f5;
 }
 
 h1 {
@@ -21,14 +30,13 @@ h2 {
 
 header img {
     width: 65%;
-    position: absolute;
     z-index: 2;
 }
 
 header p {
-    position: relative;
-    left: 2rem;
-    top: 16rem;
+    position: absolute;
+    left: 12rem;
+    top: 20rem;
     font-family: 'Josefin Sans', sans-serif;
     font-style: italic;
     font-weight: 200;
@@ -104,6 +112,6 @@ a {
 #headshot {
     border-radius: 50%;
     max-width: 50%;
-    margin-left: 30px;
+    margin-left: 25%;
     /* border: 10px solid #2D3A2F; */
 }
